// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers balanceReducer should handle GET_BALANCE 1`] = `
Object {
  "balanceLoading": true,
  "channelBalance": null,
  "walletBalance": null,
  "walletBalanceConfirmed": null,
  "walletBalanceUnconfirmed": null,
}
`;

exports[`reducers balanceReducer should handle RECEIVE_BALANCE 1`] = `
Object {
  "balanceLoading": false,
  "channelBalance": 2,
  "walletBalance": 1,
  "walletBalanceConfirmed": 1,
  "walletBalanceUnconfirmed": 1,
}
`;

exports[`reducers balanceReducer should handle initial state 1`] = `
Object {
  "balanceLoading": false,
  "channelBalance": null,
  "walletBalance": null,
  "walletBalanceConfirmed": null,
  "walletBalanceUnconfirmed": null,
}
`;

exports[`reducers balanceReducer should handle unknown action type 1`] = `
Object {
  "balanceLoading": false,
  "channelBalance": null,
  "walletBalance": null,
  "walletBalanceConfirmed": null,
  "walletBalanceUnconfirmed": null,
}
`;
